Fixed page layout issues

--- a/src/index.css
+++ b/src/index.css
@@ -6,15 +6,17 @@
   padding: 0;
 
   width: 100%;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  height: 100%;
+  color: #000000;
+  background-color: #f5efed;
 }
 
+html,
 body {
-  font-family: "outfit";
-  width: 100%;
+  height: 100%;
+  min-height: 100vh;
   margin: 0;
   padding: 0;
+  font-family: "outfit";
+  width: 100%;
 }
